# minerva

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  README.md~
src/: CMakeLists.txt  CMakeLists.txt~
src/authdb/: CMakeLists.txt  auth_db.cpp  auth_db.h
src/basher/: CMakeLists.txt  basher.cpp  http_client.cpp  http_client.h  request_gen.cpp  request_gen.h  stats.h
src/epoll/: deque.cpp  deque.h  epoll.cpp  hybrid_lock.cpp  hybrid_lock.h  kernel.cpp  kernel.h  kernel1.cpp  kernel1.h  kernel2.cpp  kernel2.h  kernel3.cpp  kernel3.h  kernel_stats.cpp  kernel_stats.h  kernel_test.cpp  kernel_test.h  makefile  makefile.arm  makefile.centos  makefile.linux  mem_stream.h  name_resolver.cpp  name_resolver.h  run.sh  settings.cpp  settings.h  spin_lock.h  test.cpp
src/httpd/: CMakeLists.txt  controller.cpp  controller.h  http_auth.cpp  http_auth.h  http_content_type.cpp  http_content_type.h  http_context.cpp  http_context.h  http_exception.h  http_request.cpp  http_request.h  http_response.cpp  http_response.h  httpd.cpp  httpd.h
src/httptest/: CMakeLists.txt  echo_controller.cpp  echo_controller.h  httptest.cpp  raw_controller.cpp  raw_controller.h  test_payload.h
src/owl/: CMakeLists.txt  CMakeLists.txt~  base64.cpp  base64.cpp~  base64.h  base64.h~  component.cpp  component.cpp~  component.h  component.h~  component_visor.cpp  component_visor.cpp~  component_visor.h  component_visor.h~  connection.cpp  connection.cpp~  connection.h  connection.h~  controller.cpp  controller.cpp~  controller.h  controller.h~  crypto.cpp  crypto.cpp~  crypto.h  crypto.h~  curl_easy.cpp  curl_easy.cpp~  curl_easy.h  curl_easy.h~  exclusive_file_lock.h  exclusive_file_lock.h~  exec_utils.cpp  exec_utils.cpp~  exec_utils.h  exec_utils.h~  file_lock.h  file_lock.h~  file_utils.cpp  file_utils.cpp~  (+91 more)
src/shield/: CMakeLists.txt  shield.cpp
src/test/: CMakeLists.txt  CMakeLists.txt~  test.cpp
src/util/: CMakeLists.txt  base64.cpp  base64.h  connection.cpp  connection.h  crypto.cpp  crypto.h  curl_easy.cpp  curl_easy.h  exclusive_file_lock.h  exec_utils.cpp  exec_utils.h  file_lock.h  file_utils.cpp  file_utils.h  guid.cpp  guid.h  jo_jpeg.cpp  jo_jpeg.h  json_utils.cpp  json_utils.h  log.cpp  log.h  name_resolver.cpp  name_resolver.h  nillable.h  safe_ofstream.cpp  safe_ofstream.h  scheduler.cpp  scheduler.h  semaphore_lock.cpp  semaphore_lock.h  shared_file_lock.cpp  shared_file_lock.h  ssl_connection.cpp  ssl_connection.h  storage_utils.cpp  storage_utils.h  string_utils.h  thread_pool.cpp  (+5 more)
src/www/: CMakeLists.txt  CMakeLists.txt~  file_server.cpp  file_server.h  kernel_default.cpp  kernel_default.cpp~  kernel_default.h  kernel_default.h~  kernel_stats.cpp  kernel_stats.cpp~  kernel_stats.h  kernel_stats.h~  settings.cpp  settings.cpp~  settings.h  settings.h~  www.cpp  www_auth_db.cpp  www_auth_db.cpp~  www_auth_db.h  www_auth_db.h~
src/www/certs/: key.pem
src/www/content/: alarm.js  config.json  fw_upgrade.html  index.html  result.html  upgrade-2.js
src/www/content/certs/: cert.pem
src/www/content/config/: config.json  webpass.txt
src/www/content/root/: index.html
src/www/content/root/bootstrap4/js/: ._bootstrap.js.map
tools/: build-docker-buildenv.sh  cmake-docker-buildenv.sh  enter-docker-buildenv.sh  generate_cert.sh  perror.sh  pi-setup.sh  runclang.sh  setup-bionic.sh  (+1 more)
