
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

FILE (GLOB APP_INCLUDE "*.h")
FILE (GLOB APP_SRC "*.cpp")

add_library(util STATIC ${APP_SRC} ${APP_INCLUDE})

target_link_libraries(util pthread stdc++ rt ${UUID_LIBRARY} ${CURL_LIBRARY} ${SSL_LIBRARY} ${CRYPTO_LIBRARY} ${NGHTTP2_LIBRARY} ${IDN2_LIBRARY} ${SSH2_LIBRARY} ${Z_LIBRARY} ${UNISTRING_LIBRARY} ${JSONCPP_LIBRARY})
